<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gotham_mission_control</name>
  <version>0.0.0</version>
  <description>Gotham mission control with action-based mission manager</description>

  <maintainer email="enderaaj_singh@gmail.com">enders</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Runtime dependencies for Python nodes -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <!-- Needed because you use setup.py -->
    <build_type>ament_python</build_type>
  </export>
</package>

